--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "bloques.h": "c",
-        "ficheros.h": "c"
+        "ficheros.h": "c",
+        "directorios.h": "c"
     }
 }
