--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "bloques.h": "c",
         "ficheros.h": "c",
-        "directorios.h": "c"
+        "directorios.h": "c",
+        "fcntl.h": "c"
     }
 }
