--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/mi_mkdir",
-            "args": ["disco","6","/dir1/"],
+            "args": ["disco","6","/dir1/dir2/"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
