--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,9 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/mi_mkdir",
-            "args": ["disco","6","/dir1/dir2/"],
-            "stopAtEntry": false,
+            "program": "${workspaceFolder}/mi_stat",
+            "args": ["disco","/dir1/"],
+            "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
