--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,8 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/mi_escribir",
-            "args": ["disco","/fichero","hola que tal","5120"],
+            "program": "${workspaceFolder}/mi_mkdir",
+            "args": ["disco","6","/dir1/dir2/fic2"],
             "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
             "environment": [],
