Corregido detall de un script

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,8 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/mi_stat",
-            "args": ["disco","/"],
+            "program": "${workspaceFolder}/mi_ls",
+            "args": ["disco","/dir1/fic1"],
             "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
             "environment": [],
