--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,8 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/mi_ls",
-            "args": ["disco","/dir1/fic1"],
+            "program": "${workspaceFolder}/simulacion",
+            "args": ["disco"],
             "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
             "environment": [],
