--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,8 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/simulacion",
-            "args": ["disco"],
+            "program": "${workspaceFolder}/verificacion",
+            "args": ["disco","/simul_20190603171243/"],
             "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
             "environment": [],
